--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aman-khan001.github.io/react-project",
+  "homepage": "https://Rajveer8085.github.io/weather-detector",
   "name": "weatherdetecter",
   "private": true,
   "version": "0.0.0",
